Section about concluida

--- a/Index.html
+++ b/Index.html
@@ -52,6 +52,24 @@
                 </ul>
             </div>
         </section>
+        <section class="about">
+            <div class="about-angulation">
+                <div class="angulation">
+
+                </div>
+                <div class="container-about">
+                    <div class="content-about">
+                        <div class="text-about">
+                            <h2>Como participar das ligas?</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi magni, exercitationem reprehenderit illum beatae, non rerum quibusdam nihil maxime provident distinctio nostrum, nobis doloribus tempora quis saepe. Perferendis, cumque culpa?
+                            <br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, beatae. Assumenda, quae ea! Non repellendus explicabo pariatur velit fuga neque, dolorem natus accusamus recusandae voluptatibus ipsam assumenda. Illo, expedita sequi.
+                            </p>
+                        </div>
+                        <img src="img/lol.png" alt="Personagem do Ezreal, do game League of Legends">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
