Parte das noticias feita

--- a/Index.html
+++ b/Index.html
@@ -70,6 +70,106 @@
                 </div>
             </div>
         </section>
+        <section class="games">
+            <div class="content flex-spbt-center">
+                <div class="games-aovivo">
+                    <h2>AO<br>VIVO</h2>
+                    <div class="partida">
+                        <div class="time1">
+                            <p>Sk</p>
+                            <img src="img/escudo_time_7789_1531524845.png" alt="Logo Do Time Rangers">
+                        </div>
+                        <p>VS</p>
+                        <div class="time2">
+                            <img src="img/asgard-vikings-logo-big-min.png" alt="Logo do Time Asgard">
+                            <p>VRS</p>
+                        </div>
+                    </div>
+                </div> <!--fim games aovivo-->
+                <div class="divisao"></div>
+                <div class="games-embreve">
+                    <h2>EM<br>BREVE</h2>
+                    <div class="partida">
+                        <div class="time1">
+                            <p>Sk</p>
+                            <img src="img/finteampombo-361x405.png" alt="Logo do Time Pombos">
+                        <p>VS</p>
+                        <div class="time2">
+                            <img src="img/gaming-logo-maker-for-an-rpg-guild-1.png" alt="Logo do Time Knights">
+                            <p>VRS</p>
+                        </div>
+                    </div>
+                    <div class="partida">
+                        <div class="time1">
+                            <p>Sk</p>
+                            <img src="img/KABUM-logo.png" alt="Logo do Time Kabum">
+                        </div>
+                        <p>VS</p>
+                        <div class="time2">
+                            <img src="img/escudo_time_38488_1564331218.png" alt="Logo do Time Noname">
+                            <p>VRS</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="noticias">
+            <div class="content">
+                <div class="container-noticias">
+                    <div class="noticias-artigos">
+                        <h3>Notícias</h3>
+                        <div class="posicionamento-artigos">
+                            <article class="artigo">
+                                <img src="" alt="">
+                                <div class="content-artigo">
+                                    <h4>Título da Notícia</h4>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet magnam sed, accusamus maiores aperiam non deleniti! Aperiam nisi voluptate dignissimos fugit inventore magnam ratione perspiciatis? Accusantium rem ratione vel rerum!</p>
+                                </div>
+                            </article>
+                            <article class="artigo">
+                                <img src="" alt="">
+                                <div class="content-artigo">
+                                    <h4>Título da Notícia</h4>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet magnam sed, accusamus maiores aperiam non deleniti! Aperiam nisi voluptate dignissimos fugit inventore magnam ratione perspiciatis? Accusantium rem ratione vel rerum!</p>
+                                </div>
+                            </article>
+                            <article class="artigo">
+                                <img src="" alt="">
+                                <div class="content-artigo">
+                                    <h4>Título da Notícia</h4>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet magnam sed, accusamus maiores aperiam non deleniti! Aperiam nisi voluptate dignissimos fugit inventore magnam ratione perspiciatis? Accusantium rem ratione vel rerum!</p>
+                                </div>
+                            </article>
+                            <article class="artigo">
+                                <img src="" alt="">
+                                <div class="content-artigo">
+                                    <h4>Título da Notícia</h4>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet magnam sed, accusamus maiores aperiam non deleniti! Aperiam nisi voluptate dignissimos fugit inventore magnam ratione perspiciatis? Accusantium rem ratione vel rerum!</p>
+                                </div>
+                            </article>
+                            <article class="artigo">
+                                <img src="" alt="">
+                                <div class="content-artigo">
+                                    <h4>Título da Notícia</h4>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet magnam sed, accusamus maiores aperiam non deleniti! Aperiam nisi voluptate dignissimos fugit inventore magnam ratione perspiciatis? Accusantium rem ratione vel rerum!</p>
+                                </div>
+                            </article>
+                            <article class="artigo">
+                                <img src="" alt="">
+                                <div class="content-artigo">
+                                    <h4>Título da Notícia</h4>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet magnam sed, accusamus maiores aperiam non deleniti! Aperiam nisi voluptate dignissimos fugit inventore magnam ratione perspiciatis? Accusantium rem ratione vel rerum!</p>
+                                </div>
+                            </article>
+                        </div>
+                    </div>    
+                </div>
+                <div class="cronograma">
+                    
+                </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
