--- a/Index.html
+++ b/Index.html
@@ -86,7 +86,6 @@
                         </div>
                     </div>
                 </div> <!--fim games aovivo-->
-                <div class="divisao"></div>
                 <div class="games-embreve">
                     <h2>EM<br>BREVE</h2>
                     <div class="partida">
@@ -120,57 +119,144 @@
                         <h3>Notícias</h3>
                         <div class="posicionamento-artigos">
                             <article class="artigo">
-                                <img src="" alt="">
+                                <img src="img/T1 1.png" alt="Jogadora Profissional Isadora">
                                 <div class="content-artigo">
                                     <h4>Título da Notícia</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet magnam sed, accusamus maiores aperiam non deleniti! Aperiam nisi voluptate dignissimos fugit inventore magnam ratione perspiciatis? Accusantium rem ratione vel rerum!</p>
+                                    <p>Lorem ipsum dolor sit amet, consectetur elit. Amet magnam sed, accusamus maiores aperiam non deleniti! Aperiam nisi voluptate dignissimos fugit inventore magnam ratione perspiciatis?</p>
                                 </div>
                             </article>
                             <article class="artigo">
-                                <img src="" alt="">
+                                <img src="img/T1 2.png" alt="Time de CSGO Dallas 2018">
                                 <div class="content-artigo">
                                     <h4>Título da Notícia</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet magnam sed, accusamus maiores aperiam non deleniti! Aperiam nisi voluptate dignissimos fugit inventore magnam ratione perspiciatis? Accusantium rem ratione vel rerum!</p>
+                                    <p>Lorem ipsum dolor sit amet, consectetur elit. Amet magnam sed, accusamus maiores aperiam non deleniti! Aperiam nisi voluptate dignissimos fugit inventore magnam ratione perspiciatis?</p>
                                 </div>
                             </article>
                             <article class="artigo">
-                                <img src="" alt="">
+                                <img src="img/T1 3.png" alt="INTZ, Time Profissional de League of Legends">
                                 <div class="content-artigo">
                                     <h4>Título da Notícia</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet magnam sed, accusamus maiores aperiam non deleniti! Aperiam nisi voluptate dignissimos fugit inventore magnam ratione perspiciatis? Accusantium rem ratione vel rerum!</p>
+                                    <p>Lorem ipsum dolor sit amet, consectetur elit. Amet magnam sed, accusamus maiores aperiam non deleniti! Aperiam nisi voluptate dignissimos fugit inventore magnam ratione perspiciatis?</p>
                                 </div>
                             </article>
                             <article class="artigo">
-                                <img src="" alt="">
+                                <img src="img/T1 4.png" alt="INTZ, Time Profissional de League of Legends">
                                 <div class="content-artigo">
                                     <h4>Título da Notícia</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet magnam sed, accusamus maiores aperiam non deleniti! Aperiam nisi voluptate dignissimos fugit inventore magnam ratione perspiciatis? Accusantium rem ratione vel rerum!</p>
+                                    <p>Lorem ipsum dolor sit amet, consectetur elit. Amet magnam sed, accusamus maiores aperiam non deleniti! Aperiam nisi voluptate dignissimos fugit inventore magnam ratione perspiciatis?</p>
                                 </div>
                             </article>
                             <article class="artigo">
-                                <img src="" alt="">
+                                <img src="img/T1 5.png" alt="Time Profissional de Dota 2 Team Secret">
                                 <div class="content-artigo">
                                     <h4>Título da Notícia</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet magnam sed, accusamus maiores aperiam non deleniti! Aperiam nisi voluptate dignissimos fugit inventore magnam ratione perspiciatis? Accusantium rem ratione vel rerum!</p>
+                                    <p>Lorem ipsum dolor sit amet, consectetur elit. Amet magnam sed, accusamus maiores aperiam non deleniti! Aperiam nisi voluptate dignissimos fugit inventore magnam ratione perspiciatis?</p>
                                 </div>
                             </article>
                             <article class="artigo">
-                                <img src="" alt="">
+                                <img src="img/T1 6.png" alt="Modelos mostrando os uniformes femininos INTZ 2019">
                                 <div class="content-artigo">
                                     <h4>Título da Notícia</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet magnam sed, accusamus maiores aperiam non deleniti! Aperiam nisi voluptate dignissimos fugit inventore magnam ratione perspiciatis? Accusantium rem ratione vel rerum!</p>
+                                    <p>Lorem ipsum dolor sit amet, consectetur elit. Amet magnam sed, accusamus maiores aperiam non deleniti! Aperiam nisi voluptate dignissimos fugit inventore magnam ratione perspiciatis?</p>
                                 </div>
                             </article>
                         </div>
+                    </div>
+                    <div class="container-cronograma">
+                        <div class="cronograma">
+                            <div class="partida-cronograma">
+                                <div class="times">
+                                    <div class="time1">
+                                        <p>Sk</p>
+                                        <img src="img/KABUM-logo.png" alt="Logo do Time Kabum">
+                                    </div>
+                                    <p>VS</p>
+                                    <div class="time2">
+                                        <img src="img/escudo_time_38488_1564331218.png" alt="Logo do Time Noname">
+                                        <p>VRS</p>
+                                    </div>
+                                </div>
+                                <p>1/12/2020 19:00</p>
+                            </div>
+                            <div class="partida-cronograma">
+                                <div class="times">
+                                    <div class="time1">
+                                        <p>Sk</p>
+                                        <img src="img/KABUM-logo.png" alt="Logo do Time Kabum">
+                                    </div>
+                                    <p>VS</p>
+                                    <div class="time2">
+                                        <img src="img/escudo_time_38488_1564331218.png" alt="Logo do Time Noname">
+                                        <p>VRS</p>
+                                    </div>
+                                </div>
+                                <p>1/12/2020 19:00</p>
+                            </div>
+                            <div class="partida-cronograma">
+                                <div class="times">
+                                    <div class="time1">
+                                        <p>Sk</p>
+                                        <img src="img/KABUM-logo.png" alt="Logo do Time Kabum">
+                                    </div>
+                                    <p>VS</p>
+                                    <div class="time2">
+                                        <img src="img/escudo_time_38488_1564331218.png" alt="Logo do Time Noname">
+                                        <p>VRS</p>
+                                    </div>
+                                </div>
+                                <p>1/12/2020 19:00</p>
+                            </div>
+                            <div class="partida-cronograma">
+                                <div class="times">
+                                    <div class="time1">
+                                        <p>Sk</p>
+                                        <img src="img/KABUM-logo.png" alt="Logo do Time Kabum">
+                                    </div>
+                                    <p>VS</p>
+                                    <div class="time2">
+                                        <img src="img/escudo_time_38488_1564331218.png" alt="Logo do Time Noname">
+                                        <p>VRS</p>
+                                    </div>
+                                </div>
+                                <p>1/12/2020 19:00</p>
+                            </div>
+                            <div class="partida-cronograma">
+                                <div class="times">
+                                    <div class="time1">
+                                        <p>Sk</p>
+                                        <img src="img/KABUM-logo.png" alt="Logo do Time Kabum">
+                                    </div>
+                                    <p>VS</p>
+                                    <div class="time2">
+                                        <img src="img/escudo_time_38488_1564331218.png" alt="Logo do Time Noname">
+                                        <p>VRS</p>
+                                    </div>
+                                </div>
+                                <p>1/12/2020 19:00</p>
+                            </div>
+                            <div class="partida-cronograma">
+                                <div class="times">
+                                    <div class="time1">
+                                        <p>Sk</p>
+                                        <img src="img/KABUM-logo.png" alt="Logo do Time Kabum">
+                                    </div>
+                                    <p>VS</p>
+                                    <div class="time2">
+                                        <img src="img/escudo_time_38488_1564331218.png" alt="Logo do Time Noname">
+                                        <p>VRS</p>
+                                    </div>
+                                </div>
+                                <p>1/12/2020 19:00</p>
+                            </div>
+                        </div>
                     </div>    
                 </div>
-                <div class="cronograma">
-                    
-                </div>
-                </div>
+                
             </div>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <h3>E-Players</h3>
+    </footer>
 </body>
 </html>
