Noticias e proximas partidas concluidos

--- a/Index.html
+++ b/Index.html
@@ -112,151 +112,136 @@
                 </div>
             </div>
         </section>
-        <section class="noticias">
-            <div class="content">
-                <div class="container-noticias">
-                    <div class="noticias-artigos">
-                        <h3>Notícias</h3>
-                        <div class="posicionamento-artigos">
-                            <article class="artigo">
-                                <img src="img/T1 1.png" alt="Jogadora Profissional Isadora">
-                                <div class="content-artigo">
-                                    <h4>Título da Notícia</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur elit. Amet magnam sed, accusamus maiores aperiam non deleniti! Aperiam nisi voluptate dignissimos fugit inventore magnam ratione perspiciatis?</p>
-                                </div>
-                            </article>
-                            <article class="artigo">
-                                <img src="img/T1 2.png" alt="Time de CSGO Dallas 2018">
-                                <div class="content-artigo">
-                                    <h4>Título da Notícia</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur elit. Amet magnam sed, accusamus maiores aperiam non deleniti! Aperiam nisi voluptate dignissimos fugit inventore magnam ratione perspiciatis?</p>
-                                </div>
-                            </article>
-                            <article class="artigo">
-                                <img src="img/T1 3.png" alt="INTZ, Time Profissional de League of Legends">
-                                <div class="content-artigo">
-                                    <h4>Título da Notícia</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur elit. Amet magnam sed, accusamus maiores aperiam non deleniti! Aperiam nisi voluptate dignissimos fugit inventore magnam ratione perspiciatis?</p>
-                                </div>
-                            </article>
-                            <article class="artigo">
-                                <img src="img/T1 4.png" alt="INTZ, Time Profissional de League of Legends">
-                                <div class="content-artigo">
-                                    <h4>Título da Notícia</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur elit. Amet magnam sed, accusamus maiores aperiam non deleniti! Aperiam nisi voluptate dignissimos fugit inventore magnam ratione perspiciatis?</p>
-                                </div>
-                            </article>
-                            <article class="artigo">
-                                <img src="img/T1 5.png" alt="Time Profissional de Dota 2 Team Secret">
-                                <div class="content-artigo">
-                                    <h4>Título da Notícia</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur elit. Amet magnam sed, accusamus maiores aperiam non deleniti! Aperiam nisi voluptate dignissimos fugit inventore magnam ratione perspiciatis?</p>
-                                </div>
-                            </article>
-                            <article class="artigo">
-                                <img src="img/T1 6.png" alt="Modelos mostrando os uniformes femininos INTZ 2019">
-                                <div class="content-artigo">
-                                    <h4>Título da Notícia</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur elit. Amet magnam sed, accusamus maiores aperiam non deleniti! Aperiam nisi voluptate dignissimos fugit inventore magnam ratione perspiciatis?</p>
-                                </div>
-                            </article>
+        <div class="bg-news">
+            <div class="content flex-spbt-center">
+                <section class="news">
+                    <h2>Notícias</h2>
+                    <div class="content-news">
+                        <div class="cardnews">
+                            <img src="img/T1 1.png" alt="Foto da Jogadora Profissional">
+                            <h3>Título da notícia</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda dolores, dolor quia facere. Cum ut at fugit aperiam tempora reprehenderit soluta.</p>
+                        </div>
+                        <div class="cardnews">
+                            <img src="img/T1 1.png" alt="Foto da Jogadora Profissional">
+                            <h3>Título da notícia</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda dolores, dolor quia facere. Cum ut at fugit aperiam tempora reprehenderit soluta.</p>
+                        </div>
+                        <div class="cardnews">
+                            <img src="img/T1 1.png" alt="Foto da Jogadora Profissional">
+                            <h3>Título da notícia</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda dolores, dolor quia facere. Cum ut at fugit aperiam tempora reprehenderit soluta.</p>
+                        </div>
+                        <div class="cardnews">
+                            <img src="img/T1 1.png" alt="Foto da Jogadora Profissional">
+                            <h3>Título da notícia</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda dolores, dolor quia facere. Cum ut at fugit aperiam tempora reprehenderit soluta.</p>
+                        </div>
+                        <div class="cardnews">
+                            <img src="img/T1 1.png" alt="Foto da Jogadora Profissional">
+                            <h3>Título da notícia</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda dolores, dolor quia facere. Cum ut at fugit aperiam tempora reprehenderit soluta.</p>
+                        </div>
+                        <div class="cardnews">
+                            <img src="img/T1 1.png" alt="Foto da Jogadora Profissional">
+                            <h3>Título da notícia</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda dolores, dolor quia facere. Cum ut at fugit aperiam tempora reprehenderit soluta.</p>
                         </div>
                     </div>
-                    <div class="container-cronograma">
-                        <div class="cronograma">
-                            <div class="partida-cronograma">
-                                <div class="times">
-                                    <div class="time1">
-                                        <p>Sk</p>
-                                        <img src="img/KABUM-logo.png" alt="Logo do Time Kabum">
-                                    </div>
-                                    <p>VS</p>
-                                    <div class="time2">
-                                        <img src="img/escudo_time_38488_1564331218.png" alt="Logo do Time Noname">
-                                        <p>VRS</p>
-                                    </div>
+                </section>
+                <aside class="next-games">
+                    <h2>Próximos Jogos</h2>
+                    <div class="next-games-bg">
+                        <div class="next-games-match">
+                            <div class="teams">
+                                <div>
+                                    <p>VRS</p>
+                                    <img src="img/escudo_time_38488_1564331218.png" alt="Logo do Time">
                                 </div>
-                                <p>1/12/2020 19:00</p>
-                            </div>
-                            <div class="partida-cronograma">
-                                <div class="times">
-                                    <div class="time1">
-                                        <p>Sk</p>
-                                        <img src="img/KABUM-logo.png" alt="Logo do Time Kabum">
-                                    </div>
-                                    <p>VS</p>
-                                    <div class="time2">
-                                        <img src="img/escudo_time_38488_1564331218.png" alt="Logo do Time Noname">
-                                        <p>VRS</p>
-                                    </div>
+                                <p>VS</p>
+                                <div>
+                                    <img src="img/KABUM-logo.png" alt="Logo do Time">
+                                    <p>SK</p>
                                 </div>
-                                <p>1/12/2020 19:00</p>
-                            </div>
-                            <div class="partida-cronograma">
-                                <div class="times">
-                                    <div class="time1">
-                                        <p>Sk</p>
-                                        <img src="img/KABUM-logo.png" alt="Logo do Time Kabum">
-                                    </div>
-                                    <p>VS</p>
-                                    <div class="time2">
-                                        <img src="img/escudo_time_38488_1564331218.png" alt="Logo do Time Noname">
-                                        <p>VRS</p>
-                                    </div>
+                            </div> <!--Fim Teams -->
+                            <p>01/12/2020 19:00</p>
+                        </div> <!-- Fim Games Match -->
+                        <div class="next-games-match">
+                            <div class="teams">
+                                <div>
+                                    <p>VRS</p>
+                                    <img src="img/escudo_time_38488_1564331218.png" alt="Logo do Time">
                                 </div>
-                                <p>1/12/2020 19:00</p>
-                            </div>
-                            <div class="partida-cronograma">
-                                <div class="times">
-                                    <div class="time1">
-                                        <p>Sk</p>
-                                        <img src="img/KABUM-logo.png" alt="Logo do Time Kabum">
-                                    </div>
-                                    <p>VS</p>
-                                    <div class="time2">
-                                        <img src="img/escudo_time_38488_1564331218.png" alt="Logo do Time Noname">
-                                        <p>VRS</p>
-                                    </div>
+                                <p>VS</p>
+                                <div>
+                                    <img src="img/KABUM-logo.png" alt="Logo do Time">
+                                    <p>SK</p>
                                 </div>
-                                <p>1/12/2020 19:00</p>
-                            </div>
-                            <div class="partida-cronograma">
-                                <div class="times">
-                                    <div class="time1">
-                                        <p>Sk</p>
-                                        <img src="img/KABUM-logo.png" alt="Logo do Time Kabum">
-                                    </div>
-                                    <p>VS</p>
-                                    <div class="time2">
-                                        <img src="img/escudo_time_38488_1564331218.png" alt="Logo do Time Noname">
-                                        <p>VRS</p>
-                                    </div>
-                                </div>
-                                <p>1/12/2020 19:00</p>
-                            </div>
-                            <div class="partida-cronograma">
-                                <div class="times">
-                                    <div class="time1">
-                                        <p>Sk</p>
-                                        <img src="img/KABUM-logo.png" alt="Logo do Time Kabum">
-                                    </div>
-                                    <p>VS</p>
-                                    <div class="time2">
-                                        <img src="img/escudo_time_38488_1564331218.png" alt="Logo do Time Noname">
-                                        <p>VRS</p>
-                                    </div>
-                                </div>
-                                <p>1/12/2020 19:00</p>
-                            </div>
+                            </div> <!--Fim Teams -->
+                            <p>01/12/2020 19:00</p>
                         </div>
-                    </div>    
-                </div>
-                
+                        <div class="next-games-match">
+                            <div class="teams">
+                                <div>
+                                    <p>VRS</p>
+                                    <img src="img/escudo_time_38488_1564331218.png" alt="Logo do Time">
+                                </div>
+                                <p>VS</p>
+                                <div>
+                                    <img src="img/KABUM-logo.png" alt="Logo do Time">
+                                    <p>SK</p>
+                                </div>
+                            </div> <!--Fim Teams -->
+                            <p>01/12/2020 19:00</p>
+                        </div>
+                        <div class="next-games-match">
+                            <div class="teams">
+                                <div>
+                                    <p>VRS</p>
+                                    <img src="img/escudo_time_38488_1564331218.png" alt="Logo do Time">
+                                </div>
+                                <p>VS</p>
+                                <div>
+                                    <img src="img/KABUM-logo.png" alt="Logo do Time">
+                                    <p>SK</p>
+                                </div>
+                            </div> <!--Fim Teams -->
+                            <p>01/12/2020 19:00</p>
+                        </div>
+                        <div class="next-games-match">
+                            <div class="teams">
+                                <div>
+                                    <p>VRS</p>
+                                    <img src="img/escudo_time_38488_1564331218.png" alt="Logo do Time">
+                                </div>
+                                <p>VS</p>
+                                <div>
+                                    <img src="img/KABUM-logo.png" alt="Logo do Time">
+                                    <p>SK</p>
+                                </div>
+                            </div> <!--Fim Teams -->
+                            <p>01/12/2020 19:00</p>
+                        </div>
+                        <div class="next-games-match">
+                            <div class="teams">
+                                <div>
+                                    <p>VRS</p>
+                                    <img src="img/escudo_time_38488_1564331218.png" alt="Logo do Time">
+                                </div>
+                                <p>VS</p>
+                                <div>
+                                    <img src="img/KABUM-logo.png" alt="Logo do Time">
+                                    <p>SK</p>
+                                </div>
+                            </div> <!--Fim Teams -->
+                            <p>01/12/2020 19:00</p>
+                        </div>
+                    </div>
+                </aside>
             </div>
-        </section>
+        </div>
     </main>
     <footer>
-        <h3>E-Players</h3>
     </footer>
 </body>
 </html>
