--- a/Index.html
+++ b/Index.html
@@ -241,7 +241,44 @@
             </div>
         </div>
     </main>
-    <footer>
+    <footer class="rodape">
+        <div class="content flex-spbt-center">
+            <div class="links-footer">
+                <div class="links">
+                    <h2>Links Úteis</h2>
+                    <ul>
+                        <li><a href="#">Regras de Utilização</a></li>
+                        <li><a href="#">Suporte</a></li>
+                        <li><a href="#">Central de Ajuda</a></li>
+                        <li><a href="#">Contato</a></li>
+                    </ul>
+                </div>
+                <div class="links">
+                    <h2>Páginas</h2>
+                    <ul>
+                        <li><a href="#">Início</a></li>
+                        <li><a href="#">Campeonatos</a></li>
+                        <li><a href="#">Resultados</a></li>
+                        <li><a href="#">Notícias</a></li>
+                        <li><a href="#">Login/Cadastro</a></li>
+                    </ul>
+                </div>
+            </div>
+            <img class="logo-rodape" src="img/Logo_Branco.png" alt="Logo E-Players">
+            <div class="sociais">
+                <h2>Faça parte de nosso clan, receba notícias e promoções</h2>
+                <form action="">
+                    <input type="email">
+                    <input type="submit" value="Cadastrar">
+                </form>
+                <div class="siga-nos">
+                    <h2>Siga-nos em:</h2>
+                    <a href="#"><img src="img/logo-instagram.png" alt="Logo do Instagram"></a>
+                    <a href="#"><img src="img/logo-facebook.png" alt="Logo do Facebook"></a>
+                    <a href="#"><img src="img/youtube-logo.png" alt="Logo do Youtube"></a>
+                </div>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
